# remote-coder

./: .gitignore  Cargo.toml  DESIGN.md  README.md  justfile  rust-toolchain.toml
.github/workflows-pending/: ci.yml
adapters/: claude-code.toml  codex.toml  cursor.toml  fake-numbered.toml  fake-yn.toml
android/: README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/helm/: HelmApp.kt  MainActivity.kt
android/app/src/main/java/com/helm/engine/: DeviceKeystore.kt  HelmRepository.kt
android/app/src/main/java/com/helm/notify/: FcmService.kt  SessionForegroundService.kt
android/app/src/main/java/com/helm/ui/: GridView.kt  HelmViewModel.kt  PairingScreen.kt  Screens.kt  Theme.kt
android/app/src/main/java/com/remotecoder/: MainActivity.kt  RemoteCoderApp.kt
android/app/src/main/java/com/remotecoder/engine/: DeviceKeystore.kt  RemoteCoderRepository.kt
android/app/src/main/java/com/remotecoder/notify/: FcmService.kt  SessionForegroundService.kt
android/app/src/main/java/com/remotecoder/ui/: GridView.kt  PairingScreen.kt  RemoteCoderViewModel.kt  Screens.kt  SplashScreen.kt  Theme.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stat_helm.xml  ic_stat_rocket.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
crates/broker/: Cargo.toml
crates/broker/src/: enroll.rs  lib.rs  main.rs
crates/broker/tests/: e2e_ssh.rs  pairing.rs
crates/engine/: Cargo.toml
crates/engine-cli/: Cargo.toml
crates/engine-cli/src/: lib.rs  main.rs  pairing_cmd.rs  render.rs
crates/engine-cli/src/tui/: mod.rs  run.rs  ui.rs
crates/engine-cli/tests/: tui_drive.rs
crates/engine-ffi/: Cargo.toml
crates/engine-ffi/src/: lib.rs  types.rs
crates/engine-ffi/tests/: FfiDriver.kt  ffi_driver.py
crates/engine/src/: engine.rs  error.rs  event.rs  lib.rs  stream.rs
crates/engine/src/adapter/: mod.rs
crates/engine/src/attention/: mod.rs
crates/engine/src/grid/: mod.rs  pen.rs  sgr.rs  vt.rs
crates/engine/src/security/: mod.rs  pairing.rs
crates/engine/src/tmux/: control.rs  keys.rs  layout.rs  mod.rs
crates/engine/src/transport/: local.rs  mod.rs  ssh.rs
crates/engine/tests/: golden.rs  local_attention.rs  local_snapshot.rs  local_stream.rs  loopback_ssh.rs
crates/notifier/: Cargo.toml
crates/notifier/hooks/: claude-code-hook.sh
crates/notifier/src/: lib.rs  main.rs  watch.rs
crates/notifier/tests/: hook_smoke.rs  privacy.rs
docs/: CONNECTING.md
fixtures/agents/: fake-numbered.sh  fake-stream.sh  fake-yn.sh
fixtures/control-mode/: altscreen-active.stream  altscreen-roundtrip.stream  cursor-rewrite.stream  octal-color.stream  wide-unicode.stream
scripts/: build-desktop-ffi.sh  dev-ntfy.sh  dev-sshd.sh  dev-tmux.sh  rcoder-host.sh  record-fixture.sh  run-ffi-test.sh
