[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/engine-cli",
    "crates/broker",
    "crates/notifier",
    "crates/engine-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sandman137/remote-coder"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Text
regex = "1"

# Internal
engine = { path = "crates/engine" }
broker = { path = "crates/broker" }
notifier = { path = "crates/notifier" }

[profile.release]
lto = "thin"
strip = "debuginfo"
