[package]
name = "engine-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote Coder desktop harness: ratatui TUI + headless CLI driving the engine"

[[bin]]
name = "rcoder"
path = "src/main.rs"

[dependencies]
engine = { workspace = true }
broker = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.29"
qrcode = "0.14"
