[package]
name = "engine-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI wrapper around the HELM engine -> libhelm_engine.so + Kotlin/Swift bindings"

[lib]
name = "helm_engine"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
engine = { workspace = true }
