[package]
name = "engine-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI wrapper around the HELM engine -> libhelm_engine.so + Kotlin/Swift bindings"

[lib]
name = "helm_engine"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
engine = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uniffi = { version = "0.29", features = ["cli"] }
