[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HELM core engine: transport, tmux protocol, VT grid, agent adapters, attention"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
vte = "0.15.0"

[dev-dependencies]
anyhow = { workspace = true }
