[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Remote Coder core engine: transport, tmux protocol, VT grid, agent adapters, attention"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
# russh: `ring` crypto backend (not the default aws-lc-rs, whose aws-lc-sys
# build script needs a C cross-compiler) so the core cross-compiles to
# Android/iOS cleanly — the DESIGN.md §2 promise, enforced by the CI
# portability guard (§13).
russh = { version = "0.62.2", default-features = false, features = ["ring", "flate2"] }
vte = "0.15.0"
getrandom = "0.3"

[dev-dependencies]
anyhow = { workspace = true }
