[package]
name = "notifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HELM host-side notify daemon: tiered attention -> privacy-filtered push (ntfy/FCM/APNs)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
